--- a/style.css
+++ b/style.css
@@ -214,7 +214,9 @@ h4 {
 #linkedin {
   width: 12%;
   margin-bottom: -3px;
-  margin-left: 40px;
+  /*margin-left: 40px;*/
+  position: relative;
+left: 2em;
 
 }
 
