--- a/style.css
+++ b/style.css
@@ -7,17 +7,21 @@
   font-size: 40px;
   letter-spacing: 12px;
   margin: 10px;
-  color: #353535;
+  color: #e8edf3;
+  /*color: #353535;*/
+
  }
 
  .name span {
-  color: #a1a9b0;
+  color: #ede9ce;
+   /*color: #a1a9b0;*/
   display: inline-block;
   letter-spacing: 12px;
   }
 
 .bio {
-  color: #8c9398;
+  /*color: #1d2120;*/
+  color: #f6f1ed;
   word-spacing: 1px;
   line-height: 25px;
   font-size: 20px;
@@ -32,16 +36,21 @@
   -webkit-animation-delay: 0.9s;
 }
 
-.arrow {
-  background: url('images/arrow.png') no-repeat center bottom;
-  padding-bottom: 70px;
+#arrow {
+  /*background: url('images/arrow.png') no-repeat center bottom;*/
+  /*padding-bottom: 55px;
   width: 5%;
-  margin: 0 auto;
+  margin: 0 auto;*/
+  font-size: 5em;
+  color: #22264b;
+  margin-top: 0.5em;
 }
 
-.arrow:hover {
+#arrow:hover {
   cursor: pointer;
-  transform: scale(1.3);
+  /*transform: scale(1.3);*/
+  /*-webkit-transition: all .6s ease;
+  -webkit-transform:scale(1.2);*/
 }
 
 h3 {
@@ -60,7 +69,7 @@ h4 {
 }
 
 .home {
-  background: url('images/bg.jpg') no-repeat;
+  background: url('images/bg2.jpeg') no-repeat;
   background-size: cover;
   background-position: 47% center;
   background-repeat: no-repeat;
@@ -69,8 +78,15 @@ h4 {
 
 .text {
   margin: 0 auto;
-  width: 22em;
+  width: 28em;
   word-wrap: break-word;
+}
+
+#skills {
+  word-wrap: none;
+  text-transform: none;
+  font-style: italic;
+  font-size: 16px;
 }
 
 #particles-js {
@@ -82,6 +98,7 @@ h4 {
   opacity: 1;
   transform: scale(1);
 }
+
 .portfolio {
   text-align: center;
 }
@@ -205,13 +222,18 @@ h4 {
 
 #linkedin {
   width: 12%;
-  margin-bottom: -3px;
+  /*margin-bottom: -3px;*/
   position: relative;
   left: 2em;
+  top: 5px;
 }
 
 .heart {
   color: red;
+}
+
+.site-design {
+  font-size: 13px;
 }
 
 
