--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ h4 {
   /*top: 46em;*/
   width: 100%;
   height: 90%;
-  margin-top: -35em;
+  margin-top: -45%;
   animation: appear 1.4s ease 0s normal forwards 1 running;
   opacity: 1;
   transform: scale(1);
@@ -125,8 +125,6 @@ h4 {
   /*font-weight: normal;*/
   color: #8c9398;
   font-size: 14px;
-
-
  }
 
 
@@ -259,7 +257,8 @@ h4 {
 
   #slide2 img {
     position: relative;
-    height: 11rem;
+    height: 8rem;
+    width: 6rem;
   }
 
   .fp-controlArrow.fp-prev {
@@ -283,6 +282,11 @@ h4 {
     padding-top: 0em;
     font-size: 15px;
   }
+
+  #particles-js {
+    margin-top: -150%;
+  }
+
 
 
 
@@ -311,6 +315,7 @@ h4 {
   #slide2 img {
     position: relative;
     height: 8rem;
+    width: 6rem;
   }
 
   .fp-controlArrow.fp-prev {
@@ -324,9 +329,9 @@ h4 {
   }
 
   .project-info {
-   width: 18em;
+   width: 27em;
    padding-top: 1em;
-   font-size: 11px;
+   font-size: 9px;
   }
 
   .contact-text {
@@ -353,6 +358,14 @@ h4 {
     padding: 10px 28px 11px 9px;
   }
 
+  #particles-js {
+    margin-top: -150%;
+  }
+
+  .rainbow {
+    font-size: 17px;
+  }
+
 
 
 }
@@ -360,9 +373,9 @@ h4 {
 @media screen and (min-device-width: 768px) {
     /* ipad-portrait */
     @media screen and (max-width: 896px) {
-        .logo{
-            display: none !important;
-        }
+      #particles-js {
+        margin-top: -93%;
+      }
     }
     /* ipad-landscape */
     @media screen and (min-width: 897px) {
