--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
 
  body {
   font-family: 'Varela',sans-serif;
-  /*text-rendering: optimizeLegibility;*/
-  /*-webkit-font-smoothing: antialiased;*/
-  /*-webkit-transform: translate3d(0px, 0px, 0px);*/
  }
 
 
@@ -15,13 +12,13 @@
  }
 
  .name span {
-  color: #daad86;
+  color: #e05915;
   display: inline-block;
   letter-spacing: 12px;
   }
 
 .bio {
-  color: #c7a693;
+  color: #935347;
   word-spacing: 1px;
   line-height: 25px;
   font-size: 20px;
@@ -89,11 +86,6 @@ h4 {
 }
 
 #particles-js {
-  /*position: fixed;*/
-  /*top: 46em;*/
-  /*width: 100%;
-  height: 90%;*/
-  /*margin-top: -45%;*/
   position: fixed;
   width: 100%;
   height: 80%;
@@ -129,13 +121,9 @@ h4 {
 
  .project-info{
   margin: 0 auto;
-  /*font-family: 'Oswald';*/
-  /*text-transform: none;*/
   letter-spacing: 0.5px;
   width: 28em;
-  /*word-wrap: break-word;*/
   padding-top: 1em;
-  /*font-weight: normal;*/
   color: #8c9398;
   font-size: 16px;
  }
@@ -218,9 +206,7 @@ h4 {
 .contact-text {
   margin: 8em auto;
   color: #f2efe8;
-  /*font-family: 'Oswald', sans-serif;*/
   text-transform: none;
-  /*color: #8c9398;*/
   letter-spacing: 2.5px;
   width: 26em;
   word-wrap: break-word;
@@ -239,12 +225,11 @@ h4 {
 
 #github:hover {
   cursor: crosshair;
-  opacity: 0.7;
+  opacity: 0.6;
 }
 
 #linkedin {
   width: 12%;
-  /*margin-bottom: -3px;*/
   position: relative;
   left: 2em;
   top: 5px;
@@ -252,7 +237,7 @@ h4 {
 
 #linkedin:hover {
   cursor: crosshair;
-  opacity: 0.7;
+  opacity: 0.6;
 }
 
 .heart {
@@ -266,14 +251,24 @@ h4 {
 
 
 
-
-
 /*iphone 5*/
-@media screen and (device-aspect-ratio: 40/71) {
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px)
+and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 40/71) {
+  .name {
+    font-size: 33px;
+  }
+  .bio {
+    font-size: 16px;
+  }
   .text {
     width: 24em;
     margin: 0 auto;
-    font-size: 11px;
+    font-size: 12px;
+  }
+
+  .text h3 {
+    font-size: 17px;
   }
 
   #skills {
@@ -306,16 +301,17 @@ h4 {
   .project-info {
     margin: 0 auto;
     letter-spacing: -0.5px;
-    width: 32em;
+    width: 29em;
     padding-top: 1em;
-    font-size: 9px;
+    font-size: 11px;
   }
 
   .contact-text {
-   letter-spacing: 1.5px;
-   width: 22em;
-   padding-top: 0em;
-   font-size: 15px;
+    letter-spacing: 1.5px;
+    margin: 0 auto;
+    width: 21em;
+    padding-top: 0em;
+    font-size: 15px;
   }
 
   h4 {
@@ -335,17 +331,12 @@ h4 {
     padding: 10px 28px 11px 9px;
   }
 
-
-  .rainbow {
-    font-size: 17px;
-  }
-
   .site-design {
     font-size: 11px;
   }
 
   .rainbow {
-    font-size: 12px;
+    font-size: 14px;
   }
 
   .lastmodified {
@@ -355,11 +346,11 @@ h4 {
 }
 
 /*other phones*/
-@media only screen and (max-width: 500px) {
-  .text {
+@media only all and (min-device-width: 375px) and (max-width : 768px) {
+    .text {
     width: 24em;
     margin: 0 auto;
-    font-size: 13px;
+    font-size: 14px;
   }
 
   .section.portfolio img {
@@ -401,6 +392,7 @@ h4 {
   }
 
 }
+
 
 @media screen and (min-device-width: 768px) {
     /* ipad-portrait */
